--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Blackjack</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="./images/favicon.png" />
   </head>
   <body>
     <div class="wrapper">
